init json backend

--- a/ComicWebApp/wwwroot/views/shared/story-list.html
+++ b/ComicWebApp/wwwroot/views/shared/story-list.html
@@ -1,4 +1,4 @@
-<div class="row_content clearfix">
+<div *ngIf="topStory" class="row_content clearfix">
     <div class="item_truyennendoc">
         <div class="wrapper_imgage">
             <a href="tokimeichatte-gomen-ne-1386.html">
