--- a/ComicWebApp/wwwroot/views/directory/genre.html
+++ b/ComicWebApp/wwwroot/views/directory/genre.html
@@ -4,7 +4,7 @@
             <div class="bg leftbar1 fl"></div>
             <div class="centertext fl" style="width:655px;padding-top:3px;">
                 Truyện thuộc thể loại {{genre | uppercase}}
-                <a href="/danhsach/index.html" class="link_right">Xem thêm&gt;&gt;</a>
+                <a [routerLink]="['Directory']" class="link_right">Xem thêm&gt;&gt;</a>
             </div>
             <div class="bg rightbar1 fl"></div>
         </div>
