--- a/ComicWebApp/wwwroot/views/directory/genre - Copy.html
+++ b/ComicWebApp/wwwroot/views/directory/genre - Copy.html
@@ -1,10 +1,10 @@
-﻿<div class="row">
+<div class="row">
     <div class="col-md-8 wrapper_truyemoicapnhat">
         <div class="title_doctruyen manhua">
             <div class="bg leftbar1 fl"></div>
             <div class="centertext fl" style="width:655px;padding-top:3px;">
                 Truyện thuộc thể loại {{genre | uppercase}}
-                <a [routerLink]="['Directory']" class="link_right">Xem thêm&gt;&gt;</a>
+                <a href="/danhsach/index.html" class="link_right">Xem thêm&gt;&gt;</a>
             </div>
             <div class="bg rightbar1 fl"></div>
         </div>
