--- a/ComicWebApp/Content/css/override.scss
+++ b/ComicWebApp/Content/css/override.scss
@@ -1,6 +1,7 @@
 ﻿/*this include all override css for default vendor css*/
 /* OVERRIDE CSS FOR BX SLIDER*/
 .bx-wrapper {
+    margin-bottom:30px;
     .bx-next {
         background: url(../images/d03.png) -63px -33px no-repeat !important;
     }
