change to user aliasname

--- a/ComicWebApp/Content/css/style.scss
+++ b/ComicWebApp/Content/css/style.scss
@@ -2091,6 +2091,8 @@ a {
     a {
         padding: 5px;
         color: $color_mine_shaft_approx;
+        text-overflow:ellipsis;
+        overflow:hidden;
         &.current{
             background: $color_azure_radiance_approx;
             color: $white;
