--- a/ComicWebApp/Content/css/style.scss
+++ b/ComicWebApp/Content/css/style.scss
@@ -1485,6 +1485,10 @@ div {
         color: $white;
         cursor: pointer;
         font-weight: 700;
+        &.active,
+        &:hover{
+            color: $color_azure_radiance_approx;    
+        }
     }
 }
 
